<resources>
    <string name="app_name">TFM</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="welcome">Welcome</string>
    <string name="back">return</string>
    <string name="quick_express">Express</string>
    <string name="scan">Scan</string>
    <string name="service_site">Service-Site</string>
    <string name="address_book">Address-book</string>
    <string name="text_sender_info">Sender-Info</string>
    <string name="text_receiver_info">Receiver-Info</string>
    <string name="mailying_way">Mailing-Way</string>
    <string name="expected_time">Expected-Time</string>
    <string name="select_time_info">Expected-Time-Period</string>
    <string name="add">Add</string>
    <string name="add_address">Add Address</string>
    <string name="update_address">Update Address</string>
    <string name="update">Update</string>
    <string name="good_info">Good-Information</string>
    <string name="good_detail_info">Good-Detail</string>
    <string name="confirm">Confirm</string>
    <string name="pay_method">Pay-Method</string>
    <string name="order">Order</string>
    <string name="cart">Cart</string>
    <string name="title_activity_maps">Map</string>
</resources>