<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Express.Fragments.ExpressMainFragment">

    <LinearLayout
        android:id="@+id/quick_main_Topbar"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/quick_express"
            android:textColor="@color/black"
            android:textSize="25sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/quick_main_sender"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/sender"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="280dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/express_main_sender_place_holder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_sender_info" />

                <LinearLayout
                    android:id="@+id/express_main_sender_info"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/express_main_sender_name_and_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey" />

                    <TextView
                        android:id="@+id/express_main_sender_address"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/grey"
                        android:textSize="12sp" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/express_main_sender_address_book"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/address_book"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/purple_200" />

        <LinearLayout
            android:id="@+id/express_main_receiver"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/receiver"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="280dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/express_main_receiver_place_holder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_receiver_info"
                    android:visibility="visible" />

                <LinearLayout
                    android:id="@+id/express_main_receiver_info"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/express_main_receiver_name_and_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey" />

                    <TextView
                        android:id="@+id/express_main_receiver_address"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/grey"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/express_main_receiver_address_book"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/address_book"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/express_main_mailing_way_title"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:gravity="center_vertical"
            android:text="@string/mailying_way" />

        <RadioGroup
            android:id="@+id/express_main_mailing_way_value"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="80dp"
            android:layout_toEndOf="@+id/express_main_mailing_way_title"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/express_main_mailing_way_value_home"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/shape_edittext_box"
                android:text="Home Access" />

            <RadioButton
                android:id="@+id/express_main_mailing_way_value_site"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/shape_edittext_box"
                android:text="Site" />

        </RadioGroup>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/grey" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/express_main_expected_time_title"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:gravity="center_vertical"
            android:text="@string/expected_time" />

        <TextView
            android:id="@+id/express_main_expected_time_value"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="180dp"
            android:layout_toEndOf="@id/express_main_expected_time_title"
            android:gravity="center_vertical"
            android:text="Not Slected" />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/grey" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/express_main_good_info_title"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:gravity="center_vertical"
            android:text="@string/good_info" />

        <TextView
            android:id="@+id/express_main_good_info_value"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="180dp"
            android:layout_toEndOf="@id/express_main_good_info_title"
            android:gravity="center_vertical"
            android:text="Not Slected" />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/grey" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/quick_main_pay_method_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/pay_method" />

        <RadioGroup
            android:id="@+id/rg_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_pay_online"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:background="@drawable/shape_edittext_box"
                android:text="Pay Online" />

            <RadioButton
                android:id="@+id/rb_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/shape_edittext_box"
                android:text="Collect" />
        </RadioGroup>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <Button
        android:id="@+id/express_main_submit"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/order" />


</LinearLayout>